HHexen ChangeLog

v1.6.4
 - fixed a heap buffer overrun which was introduced back in v1.6.0.
 - new mus2midi converter code by Bret Curtis.
 - double-buffering support and double-buffered rectangle rendering in 
   software renderer, by Miro Kropacek.
 - Atari (FreeMint) support, by Miro Kropacek.
 - miscellaneous cleanups and build fixes

v1.6.3
 - verified successful compilation using gcc-4.6 to 4.8 and clang-3.x. fixed
   some undefined behaviors in the C code.
 - recognize Hexen wads from Mac port by Presage and display proper credits page

v1.6.2
 - reject the old (beta) PC demo (from hexen.zip, "Released October 2nd, 1995").
 - configury updates.

v1.6.1
 - fixed player movement for environments where the char type is unsigned by
   default.
 - made detSideFloat() and findIntersectionVertex() to compile without
   optimizations, at least for gcc >= 4.4, providing some partial solution to
   to opengl clipping problems.
 - added -nomidi as a new command line option.

v1.6.0
 - fixed a rare menu related crash.
 - worked around audio corruption with the sdlmixer driver when SDL_mixer tried
   looping the background music.
 - fixed interoperability of games saved on little and big endian machines: it
   was a nasty bug I have been forgetting since 1.5.0.  the fix added in 1.6.0
   might break game files saved on big endian machines using hhexen-1.5.x.  the
   saves from little endian machines are fully compatible.
 - added --with-datapath a new configure option. if not used, SHARED_DATAPATH
   is defined as an empty string, otherwise as the directory path given on the
   configure command line. if it isn't an empty string and the HHEXEN_DATA
   environment variable isn't found, the engine will use it as its shared data
   path.
 - made sure that the HHEXEN_DATA environment variable, if found, isn't an empty
   string.
 - added -waddir as a new command line option. if the option is present and has